Closed Bug 399195 Opened 18 years ago Closed 18 years ago

Shutdown leaks when a11y active

Categories

(Core :: Disability Access APIs, defect)

defect
Not set
critical

Tracking

()

RESOLVED FIXED

People

(Reporter: aaronlev, Assigned: aaronlev)

References

Details

(Keywords: access, memory-leak)

Attachments

(2 files, 1 obsolete file)

Attached file Leak log
Steps: 1. set XPCOM_MEM_LEAK_LOG=leak.log 2. Run MSAA Inspect or Accexplore.exe 3. Run firefox about:blank 4. If using accexplore, grab the accessible tree of Firefox 5. Quit inspect/accexplore 6. Quit Firefox Results: Accessible object leaks shown in leak log
Attached patch Fixes 3 leaksSplinter Review
Attachment #284209 - Flags: review?(ginn.chen)
Comment on attachment 284210 [details] More leaks that occur when Inspect running and you tab around a page -- will probably file separate bug for this Actually, this is a bug in my test tool. When using a non-modified version of Inspect there is no issue.
Attachment #284210 - Attachment is obsolete: true
Comment on attachment 284209 [details] [diff] [review] Fixes 3 leaks >Index: accessible/src/base/nsAccessNode.cpp >=================================================================== >RCS file: /cvsroot/mozilla/accessible/src/base/nsAccessNode.cpp,v >retrieving revision 1.66 >diff -p -u -5 -r1.66 nsAccessNode.cpp >--- accessible/src/base/nsAccessNode.cpp 2 Oct 2007 00:57:23 -0000 1.66 >+++ accessible/src/base/nsAccessNode.cpp 9 Oct 2007 21:06:37 -0000 >@@ -223,20 +223,21 @@ nsAccessNode::GetApplicationAccessible() > > gApplicationAccessible = new nsApplicationAccessibleWrap(); > if (!gApplicationAccessible) > return nsnull; > >+ // Addref on create. Will Release in ShutdownXPAccessibility() > NS_ADDREF(gApplicationAccessible); > > nsresult rv = gApplicationAccessible->Init(); > if (NS_FAILED(rv)) { > NS_RELEASE(gApplicationAccessible); You should add gApplicationAccessible = nsnull otherwise we will try to release it later. Rigth?
Surkov, that's no problem. How about r+ with that change?
Comment on attachment 284209 [details] [diff] [review] Fixes 3 leaks sure
Attachment #284209 - Flags: review?(ginn.chen)
Attachment #284209 - Flags: review+
Attachment #284209 - Flags: approval1.9?
Attachment #284209 - Flags: approval1.9?
Comment on attachment 284209 [details] [diff] [review] Fixes 3 leaks Surkov, I haven't figured out how to get an email notification for a+ when you requested a? for me.
Attachment #284209 - Flags: approval1.9?
(In reply to comment #7) > (From update of attachment 284209 [details] [diff] [review]) > Surkov, I haven't figured out how to get an email notification for a+ when you > requested a? for me. > Ask me to notify you when I get a notification :) dunno.
Attachment #284209 - Flags: approval1.9? → approval1.9+
Status: NEW → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: