Bug 399195. Shutdown leaks when a11y active. r=surkov, a=dsicore